Add some PR comment fixes